static/styles/index.css
/* ... */
.add-listing {
  height: 40px;
  padding: 0px 30px;
  border: 1px solid #f5f5f5;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: transparent;
  color: #f5f5f5;
  font-weight: bold;
  text-align: center;
  border-radius: 30px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.add-listing:hover {
  background-color: #f5f5f5;
  color: rgba(51, 51, 51, 0.736);
  border: 0px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.sub-header-end {
  position: relative;
  display: flex;
}

.cart,
.profile {
  margin: auto 0;
  margin-left: 20px;
  height: 60px;
  width: 60px;
  background-color: transparent;
  border: 0;
}

.cart:hover,
.profile:hover {
  background-color: #f5f5f54d;
  color: rgba(51, 51, 51, 0.736);
  border-radius: 50%;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.cart>img,
.profile>img {
  height: 80%;
  width: 90%;
}

#cart-items-quantity {
  position: absolute;
  top: -10px;
  right: 10%;
  font-size: 14px;
  font-weight: bold;
  color: #fff;
  background-color: #cb6336;
  border-radius: 50%;
  padding: 2px 5px;
  border: 0;
}

.profile {
  margin-left: 0;
}

/* Property details container for welcome pane */
.welcome-pane-container>.property-details-container {
  position: absolute;
  width: 100%;
  height: 120px;
  bottom: 40px;
  background: transparent;
  display: flex;
  align-items: center;
  justify-content: center;
}

.welcome-pane-container .property-details {
  height: 100%;
  width: 85%;
  border: 0px;
  border-radius: 10px;
  background-color: #f5f5f5;
  /* margin: auto; */
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0 50px;
  align-items: center;
  justify-content: center;
}

.welcome-pane-container .property-details p {
  margin: auto 0;
}

#prop-name {
  font-size: x-large;
  font-weight: 700;
  color: #333;
}

.welcome-pane-container .property-address {
  font-size: small;
  color: rgb(116, 116, 116);
}

.welcome-pane-container .property-price {
  position: relative;
  margin-left: auto;
}

.welcome-pane-container .property-details div>p:first-child {
  font-size: small;
  color: rgb(116, 116, 116);
}

.welcome-pane-container .property-details .value {
  font-size: medium;
  color: #333;
  font-weight: 700;
}

.welcome-pane-container .property-details .property-price>.value {
  margin: 0;
  font-size: x-large;
  color: #385ed9;
}

.welcome-pane-container .property-specs {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  margin: auto 0;
  margin-left: auto;
}

.welcome-pane-container .property-specs>div {
  margin: 10px;
  display: flex;
  flex-direction: row;
  width: 130px;
}

.welcome-pane-container .property-specs .left {
  margin-right: 10px;
  height: 40px;
  width: 40px;
  background-color: #385ed9;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.property-specs .icon {
  height: 30px;
  width: 30px;
}

/* Image slider buttons */
.image-slider-buttons-container,
.image-slider-buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.image-slider-buttons-container {
  position: absolute;
  top: 45%;
  width: 70px;
  height: 70px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.image-slider-buttons-container:hover {
  background-color: #f5f5f555;
  color: rgba(51, 51, 51, 0.736);
  border: 0px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}

.image-slider-buttons {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  border: 0px;
  background-color: #f5f5f5;
}

.image-slider-buttons>img {
  height: 40%;
  width: 40%;
}

.welcome-pane-container .nextBtn {
  right: 30px;
}

.welcome-pane-container .prevBtn {
  left: 30px;
}

/* Popular locations */
.popular-locations-main-container {
  position: relative;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.popular-locations-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0;
  margin: 90px 0;
}

.popular-locations-container>h3 {
  font-size: xx-large;
  font-weight: 500;
  color: #333;
  margin: 0;
}

.popular-locations-container>p,
.explore-container>p {
  width: 600px;
  text-align: center;
  font-size: 14px;
  color: rgb(116, 116, 116);
}

.popular-locations-container>.popular-locations {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 25px;
  margin: 30px auto;
  width: 100%;
}

.popular-locations>.location {
  height: 300px;
  width: 100%;
  display: flex;
  flex-direction: column;
  position: relative;
}

.popular-locations>.location>img {
  height: 100%;
  width: 100%;
  border-radius: 5px;
}

.location .location-details {
  position: absolute;
  bottom: 25px;
  left: 25px;
  width: 100%;
  color: #f5f5f5;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
  z-index: 2;
}

.location:hover .location-details,
.explore-list-item:hover .explore-list-item-details {
  color: #fff;
  bottom: 40px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: position 10s;
  -ms-transition: position 10s;
  -o-transition: position 10s;
  transition: all 0.5s ease;
}
/* ... */

